--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Etiqueta encabezado - resultado esperado</title>
+    <html lang="en">
+    <head>   
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1"> 
+        <link href="dist/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <title>Andrea Gabriela Meierstein</title>
     </head>
     <body>
-        <h1>Título principal de la practica HTML</h1>
-        <p>Estamos aprendiendo HTML y necesitamos practicar para que se nos fije el conocimiento, en poco tiempo voy a poder maquetar un sitio web completo. en este documento de practica veremos los distintos HTML que podemos encontrar </p>
+        <h1>Andrea Gabriela Meierstein</h1>
+        <p>Programadora web full stack jr.</p>
         <h2>Primero HTML semántico.</h2>
         <p>HTML Semántico es el uso de las etiquetas HTML para reforzar la semántica, o el significado, de la información en las páginas web más que simplemente redefinir su forma de presentación (apariencia). El HTML semántico es procesado por los navegadores web regulares así como por muchos otros agentes de usuarios. Las CSS son usadas para sugerir la presentación de la página a usuarios humanos.</p>
         <h3>Primer subtema Usos.</h3>
@@ -26,6 +30,7 @@
             Estándar futuro. System Information API. Acceso al hardware a bajo nivel: red, ficheros, CPU, memoria, puertos USB, cámaras, micrófonos... Muy interesante, pero con numerosas salvedades de seguridad.</p>
             <h2>Conclusiones</h2>
             <p>HTML es necesario para estructurar el contenido de las web que hoy conocemos y sin duda fue evolucionando con el tiempo</p>
-		<p>Sin lugar a dudas hay que aprenderlo para ir mejorando la calidad de las paginas web que utilizamos.</p>
+		    <p>Sin lugar a dudas hay que aprenderlo para ir mejorando la calidad de las paginas web que utilizamos.</p>
+            <script src="dist/bootstrap/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
